# da4qi4

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.9742407  LICENSE  Makefile  README.md  README_BACKUP_18085.md  README_REMOTE_18085.md  app_setting.cpp  app_setting.hpp  application.cpp  application.hpp  asio_def.hpp  asio_utilities.hpp  cmake_install.cmake  connection.cpp  connection.hpp  context.cpp  context.hpp  cookie.cpp  cookie.hpp  da4qi4.astylerc  da4qi4.hpp  engine.cpp  engine.hpp  handler.cpp  handler.hpp  intercepter.cpp  intercepter.hpp  intercepter_session_redis.hpp  intercepter_staticfile.cpp  intercepter_staticfile.hpp  main.cpp  redis_client.cpp  redis_client.hpp  rediscli_pool.cpp  rediscli_pool.hpp  render.hpp  renderer.cpp  renderer.hpp  (+20 more)
captcha/: LICENSE  Makefile  captcha  captcha.c  font.h  libcaptcha.c  test  test.c  unfont  unfont.c
def/: asio_def.hpp  boost_def.cpp  boost_def.hpp  debug_def.hpp  def.cpp  def.hpp  filesystem_def.hpp  inja_def.hpp  json_def.cpp  json_def.hpp  log_def.cpp  log_def.hpp  redis_def.cpp  redis_def.hpp
include/: connection.hpp  handler.hpp  router.hpp  session.hpp  templates.hpp
include/daqi/: application.hpp  connection.hpp  context.hpp  cookie.hpp  da4qi4.hpp  handler.hpp  intercepter.hpp  rediscli_pool.hpp  request.hpp  response.hpp  router.hpp  server.hpp  server_engine.hpp  session.hpp  templates.hpp  url.hpp
include/daqi/client/: connection.hpp  connection_client.hpp
include/daqi/def/: asio_def.hpp  boost_def.hpp  def.hpp  json_def.hpp  log_def.hpp  redis_def.hpp
include/daqi/intercepters/: session_redis.hpp  static_file.hpp
include/daqi/net-detail/: net_detail_client.hpp  net_detail_server.hpp
include/daqi/redis-client/: redis_buffer.hpp  redis_client.hpp  redis_command.hpp  redis_parser.hpp  redis_value.hpp
include/daqi/utilities/: asio_utilities.hpp  base64_utilities.hpp  container_utilities.hpp  des3_utilities.hpp  encoding_utilities.hpp  file_utilities.hpp  hmac_sha1_utilities.hpp  html_utilities.hpp  http_utilities.hpp  md5_utilities.hpp  string_utilities.hpp
include/daqi/websocket/: connection_websocket.hpp  context_websocket.hpp  frame_websocket.hpp  handler_websocket.hpp  websocket.hpp
include/def/: asio_def.hpp  def.hpp  inja_def.hpp
include/intercepters/: session_redis.hpp
include/redis-client/: redis_client.hpp
include/utilities/: hmac_algo.hpp  string_utilities.hpp
inja/: inja.hpp
intercepters/: session_redis.cpp  session_redis.hpp  static_file.cpp  static_file.hpp  staticfile.cpp
llhttp/: CMakeLists.txt  README.md  api.c  llhttp.h
llhttp/helper/: http_status_def.h  http_url_def.c  http_url_def.h
multipart-parser/: CMakeLists.txt
nlohmann_json/: CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  nlohmann_jsonTargets.cmake
redis-client/: redis_buffer.cpp  redis_buffer.hpp  redis_client.cpp  redis_client.hpp  redis_command.cpp  redis_command.hpp  redis_parser.cpp  redis_parser.hpp  redis_value.cpp
src/: application.cpp  connection.cpp  context.cpp  cookie.cpp  demo_main.cpp  handler.cpp  intercepter.cpp  main_demo.cpp  rediscli_pool.cpp  request.cpp  response.cpp  router.cpp  server.cpp  server_engine.cpp  session.cpp  templates.cpp  url.cpp
src/client/: connection.cpp  connection_client.cpp
src/def/: boost_def.cpp  def.cpp  json_def.cpp  log_def.cpp  redis_def.cpp
src/intercepters/: session_redis.cpp  static_file.cpp
src/net-detail/: net_detail_client.cpp  net_detail_server.cpp
src/redis-client/: redis_buffer.cpp  redis_client.cpp  redis_command.cpp  redis_parser.cpp  redis_value.cpp
src/utilities/: asio_utilities.cpp  base64.cpp  base64_utilities.cpp  captcha_utilities.cpp  des3_utilities.cpp  encoding_utilities.cpp  file_utilities.cpp  hmac_algo.cpp  hmac_sha1_utilities.cpp  html_utilities.cpp  http_utilities.cpp  md5_utilities.cpp  string_utilities.cpp
src/websocket/: connection_websocket.cpp  context_websocket.cpp  frame.cpp  frame_websocket.cpp  handler_websocket.cpp
tools/aliyun_sms/: sms_client.cpp  sms_client.hpp  sms_message.cpp  sms_message.hpp
utilities/: asio_utilities.cpp  asio_utilities.hpp  base64.cpp  captcha_utilities.cpp  captcha_utilities.hpp  container_utilities.hpp  file_utilities.cpp  file_utilities.hpp  hmac_algo.cpp  html_utilities.cpp  html_utilities.hpp  http_utilities.cpp  http_utilities.hpp  string_utilities.cpp  string_utilities.hpp
